--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
-node_modules
+vendor/
+templates/
+content/
+move_out.sh
+move_in.sh
+theme_tests.sh
+bower_components/
+node_modules/
+dandelion.yml
+sass/navigation/luxbar
+sass/navigation/_luxbar.scss
+.DS_Store
+html
+w3cErrors/
+.vscode
