--- a/devpackages-master/package.json
+++ b/devpackages-master/package.json
@@ -1,7 +1,7 @@
 {
   "name": "leitura",
-  "version": "9.4.7",
-  "description": "A minimalist WordPress starter theme.",
+  "version": "2.6.0",
+  "description": "Leitura powered by dudestack + devpackages",
   "author": "Digitoimisto Dude Oy (moro@dude.fi)",
   "devDependencies": {
     "@babel/core": "^7.20.12",
@@ -13,11 +13,11 @@
     "@ronilaukkarinen/stylelint-a11y": "^1.2.7",
     "@ronilaukkarinen/stylelint-declaration-strict-value": "^1.9.2",
     "@ronilaukkarinen/stylelint-value-no-unknown-custom-properties": "^4.0.1",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.13",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^9.1.2",
     "babel-preset-airbnb": "^5.0.0",
-    "browser-sync": "^3.0.3",
+    "browser-sync": "^2.27.11",
     "caniuse-lite": "^1.0.30001452",
     "cssnano": "^5.1.14",
     "cssnano-preset-advanced": "^5.3.9",
@@ -27,30 +27,30 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "gulp": "^5.0.0",
+    "gulp": "4.0.2",
     "gulp-eslint-new": "^1.7.2",
     "gulp-exec": "^5.0.0",
     "gulp-notify": "^4.0.0",
     "gulp-phpcs": "^3.1.0",
-    "gulp-postcss": "^10.0.0",
-    "gulp-sass": "^6.0.0",
+    "gulp-postcss": "^9.0.1",
+    "gulp-sass": "^5.1.0",
     "gulp-size": "^4.0.1",
     "gulp-sourcemaps": "^3.0.0",
     "hint": "^7.1.3",
     "npm-check-updates": "^16.7.4",
-    "postcss": "^8.4.31",
-    "postcss-calc": "^10.0.2",
-    "postcss-colormin": "^7.0.2",
-    "postcss-discard-empty": "^7.0.0",
-    "postcss-merge-longhand": "^7.0.4",
-    "postcss-merge-rules": "^7.0.4",
-    "postcss-minify-gradients": "^7.0.0",
-    "postcss-normalize-positions": "^7.0.0",
-    "postcss-normalize-url": "^7.0.0",
+    "postcss": "^8.4.21",
+    "postcss-calc": "^8.2.4",
+    "postcss-colormin": "^5.3.0",
+    "postcss-discard-empty": "^5.1.1",
+    "postcss-merge-longhand": "^5.1.7",
+    "postcss-merge-rules": "^5.1.3",
+    "postcss-minify-gradients": "^5.1.1",
+    "postcss-normalize-positions": "^5.1.1",
+    "postcss-normalize-url": "^5.1.0",
     "postcss-scss": "^4.0.6",
-    "postcss-unique-selectors": "^7.0.3",
-    "postcss-zindex": "^7.0.0",
-    "sass": "^1.83.0",
+    "postcss-unique-selectors": "^5.1.1",
+    "postcss-zindex": "^5.1.0",
+    "sass": "^1.58.1",
     "stylelint": "^15.6.2",
     "stylelint-config-recommended": "^10.0.1",
     "stylelint-config-recommended-scss": "^9.0.1",
@@ -63,11 +63,5 @@
     "vinyl-named": "^1.1.0",
     "webpack": "^5.75.0",
     "webpack-stream": "^7.0.0"
-  },
-  "dependencies": {
-    "airbnb-browser-shims": "^3.3.0",
-    "moveto": "^1.8.2",
-    "reframe.js": "^4.0.0",
-    "vnu-jar": "^24.10.17"
   }
 }
