--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
   "dependencies": {
     "airbnb-browser-shims": "^3.3.0",
     "moveto": "^1.8.2",
+    "owl.carousel": "^2.3.4",
     "reframe.js": "^4.0.0",
     "vnu-jar": "^24.10.17"
   }
