--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "leitura",
   "version": "9.4.7",
-  "description": "A minimalist WordPress starter theme.",
-  "author": "Digitoimisto Dude Oy (moro@dude.fi)",
+  "description": "Tema para a livraria Leitura",
   "devDependencies": {
     "@babel/core": "^7.20.12",
     "@babel/eslint-parser": "^7.19.1",
@@ -15,10 +14,11 @@
     "@ronilaukkarinen/stylelint-value-no-unknown-custom-properties": "^4.0.1",
     "autoprefixer": "^10.4.20",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^9.1.2",
+    "babel-loader": "^9.2.1",
     "babel-preset-airbnb": "^5.0.0",
     "browser-sync": "^3.0.3",
     "caniuse-lite": "^1.0.30001452",
+    "css-loader": "^7.1.2",
     "cssnano": "^5.1.14",
     "cssnano-preset-advanced": "^5.3.9",
     "eslint": "^8.34.0",
@@ -51,6 +51,7 @@
     "postcss-unique-selectors": "^7.0.3",
     "postcss-zindex": "^7.0.0",
     "sass": "^1.83.0",
+    "style-loader": "^4.0.0",
     "stylelint": "^15.6.2",
     "stylelint-config-recommended": "^10.0.1",
     "stylelint-config-recommended-scss": "^9.0.1",
@@ -61,7 +62,8 @@
     "stylelint-scss": "^4.4.0",
     "terser-webpack-plugin": "^5.3.6",
     "vinyl-named": "^1.1.0",
-    "webpack": "^5.75.0",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1",
     "webpack-stream": "^7.0.0"
   },
   "dependencies": {
@@ -70,5 +72,8 @@
     "owl.carousel": "^2.3.4",
     "reframe.js": "^4.0.0",
     "vnu-jar": "^24.10.17"
+  },
+  "scripts": {
+    "build:dev": "webpack --config gulp/webpack.config.dev.js"
   }
 }
