--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "phpcompatibility/php-compatibility": "dev-develop as 9.3.5",
     "squizlabs/php_codesniffer": "*",
     "dealerdirect/phpcodesniffer-composer-installer": "^0.7",
-    "phpcompatibility/phpcompatibility-wp": "*"
+    "phpcompatibility/phpcompatibility-wp": "*",
+    "phpunit/phpunit": "^12.0"
   }
 }
