Ajustes nos blocos existentes e adicionando bloco newsletter

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ html
 w3cErrors/
 .vscode
 inc/includes/resources.php
+css/dev/global.css
+css/dev/global.css.map
+css/dev/gutenberg-editor-styles.css.map
