--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,7 @@ inc/includes/resources.php
 css/dev/global.css
 css/dev/global.css.map
 css/dev/gutenberg-editor-styles.css.map
+css/dev/global.css
+css/dev/global.css.map
+css/dev/gutenberg-editor-styles.css
+css/dev/gutenberg-editor-styles.css.map
