--- a/package.json
+++ b/package.json
@@ -66,7 +66,9 @@
   },
   "dependencies": {
     "airbnb-browser-shims": "^3.3.0",
+    "jquery": "^3.7.1",
     "moveto": "^1.8.2",
+    "owl.carousel": "^2.3.4",
     "reframe.js": "^4.0.0",
     "vnu-jar": "^24.10.17"
   }
